Revert "a farewell to the trash panda and fixed box alignment"
This reverts commit 155226abee9c640acc532565ade6423ae5bbe39d.

--- a/assets/stylesheets/game.css
+++ b/assets/stylesheets/game.css
@@ -1,5 +1,5 @@
 html {
-  background: navy;
+  background-image: url('../images/IMG_4860.jpg');
   background-size: cover;
 }
 
@@ -89,17 +89,17 @@ html {
   
 }
 
+
 .game-container {
   display: flex;
   align-items: center;
   height: -webkit-fill-available;
-  height: fill-available;
   justify-content: space-around;
 }
 
 .instructions {
   height: 250px;
-  width: 640px;
+  width: 600px;
   background-color: rgba(255,255,255, 0.6);
   margin-bottom: 2px;
 }
@@ -260,7 +260,7 @@ html {
   font-size: 20px;
   background: aliceblue;
   /* border-radius: 14px; */
-  padding: 134px 25px 535px 25px;
+  padding: 134px 25px 472px 25px;
   /* margin-top: 100px; */
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   opacity: .6;
@@ -286,9 +286,8 @@ html {
   background-color: grey;
 }
 
-
 #distractorBar {
   width: 1%;
   height: 30px;
   background-color: green;
-} 
+}
